# jwst-kpi

./: .gitignore  MANIFEST.in  README.md  setup.cfg
examples/: evaluate_pupil_model.py  generate_pupil_model.py  make_pupil_models.py  niriss_kerphase.ipynb  stpipe-log.cfg  test_kpi_miri.py  test_kpi_nircam.py  test_kpi_niriss.py
examples/previous_version/: evaluate_pupil_model.py  niriss_kerphase.ipynb
examples/pupilmodel/: nircam_bar_pupil.fits  nircam_rnd_pupil.fits  niriss_nrm_pupil.fits
extras/: generate_pupil_model.py
jwst_kernel/: __init__.py  calwebb_kpi3.py  utils.py
jwst_kernel/pupil_data/: nircam_clear_pupil.fits
jwst_kpi/: __init__.py  calwebb_kpi3.py  constants.py  fourier_bpclean.py  utils.py
jwst_kpi/datamodels/: __init__.py  badpixcube.py  badpiximage.py  integration.py  kpfits.py  recentercube.py  recenterimage.py  trimmedcube.py  trimmedimage.py  windowcube.py  windowimage.py
jwst_kpi/datamodels/schemas/: badpixcube.schema.yaml  badpiximage.schema.yaml  kpfits.schema.yaml  kpicore.schema.yaml  recentercube.schema.yaml  recenterimage.schema.yaml  trimmedcube.schema.yaml  trimmedimage.schema.yaml  windowcube.schema.yaml  windowimage.schema.yaml
jwst_kpi/empirical_uncertainties/: __init__.py  empirical_uncertainties_plots.py  empirical_uncertainties_step.py  emprical_uncertainties_plots.py
jwst_kpi/extract_kerphase/: __init__.py  extract_kerphase_plots.py  extract_kerphase_step.py
jwst_kpi/fix_bad_pixels/: __init__.py  bp_fourier_method.py  bp_medfilt_method.py  fix_bad_pixels_plots.py  fix_bad_pixels_step.py  fourier_bpclean.py
jwst_kpi/pipeline/: __init__.py  calwebb_kpi3.py
jwst_kpi/pupil_data/: niriss_nrm_pupil.fits
jwst_kpi/recenter_frames/: __init__.py  recenter_frames_plots.py  recenter_frames_step.py
jwst_kpi/trim_frames/: __init__.py  trim_frames_plots.py  trim_frames_step.py
jwst_kpi/window_frames/: __init__.py  window_frames_plots.py  window_frames_step.py
tests/: test_badpix_step.py  test_emp_uncert_step.py  test_extract_step.py  test_kpi3_pipeline.py  test_recenter_step.py  test_trim_step.py  test_window_step.py
