[metadata]
name = jwst_kpi
description =Kernel Phase Pipeline for JWST
long_description = file: README.md
long_description_content_type = text/markdown
author = Jens Kammerer
url = https://github.com/kammerje/jwst-kpi
license = GPL-3.0 License

[options]
zip_safe = False
packages = find:
include_package_data = True
# TODO: Update to Jens' fork when changes for opticstools merged
install_requires =
    # xara @ git+https://github.com/kammerje/xara.git@develop
    xara @ git+https://github.com/vandalt/xara.git@calwebb-nopipeline

[options.extras_require]
dev = 
    jwst
    fouriever @ git+https://github.com/kammerje/fouriever.git
