[metadata]
name = jwst_kpi
description =Kernel Phase Pipeline for JWST
long_description = file: README.md
long_description_content_type = text/markdown
author = Jens Kammerer
url = https://github.com/kammerje/jwst-kpi
license = GPL-3.0 License

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    numpy
    scipy
    matplotlib
    astropy
    jwst
    asdf
    astroquery
    xara @ git+https://github.com/kammerje/xara.git@develop

[options.extras_require]
dev =
    tqdm
    webbpsf
    fouriever @ git+https://github.com/kammerje/fouriever.git
    xaosim @ git+https://github.com/fmartinache/xaosim.git

[options.entry_points]
asdf.resource_mappings =
    jwst_kpi_datamodel = jwst_kpi.datamodels.integration:get_resource_mappings

[options.package_data]
* = *.yaml
